--- a/Frontend/Style.css
+++ b/Frontend/Style.css
@@ -62,7 +62,7 @@ div.a {
   .hero{
     height: 100vh;
     width: 100%;
-    background-image: url(sky.jpg);
+    background-image: url(/Frontend/Assets/sky.jpg);
     background-size: cover;
     background-position: center;
     position: relative;
@@ -73,7 +73,7 @@ div.a {
     height: 200px;
     width: 500%;
     display: block;
-    background-image: url(road.jpg);
+    background-image: url(/Frontend/Assets/road.jpg);
     position: absolute;
    bottom: 0;
    left: 0;
@@ -90,7 +90,7 @@ div.a {
   .city{
     height: 250px;
     width: 500%;
-    background-image: url(city.png);
+    background-image: url(/Frontend/Assets/city.png);
     position: absolute;
     bottom: 200px;
     left: 0;
